--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,9 +41,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=true
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-driver.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
