--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Mysql driver\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Mysql driver\\mysql-connector-java-8.0.11.jar
-file.reference.mysql-driver.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Mysql driver\\mysql-driver.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -84,10 +82,8 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}:\
-    ${file.reference.mysql-driver.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 war.ear.name=${war.name}
-war.name=JavaFinalWebSeletest.war
+war.name=JavaFinalWebSele.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
