--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.activation.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Facultad-LAPTOP-ABOPBMPH-LAPTOP-ABOPBMPH\\Electivas\\Java\\utilidades\\jaf-1.1.1\\activation.jar
+file.reference.javax.mail.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Facultad-LAPTOP-ABOPBMPH-LAPTOP-ABOPBMPH\\Electivas\\Java\\utilidades\\javax.mail.jar
 file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\selef\\OneDrive\\Documentos\\Mysql driver\\mysql-connector-java-8.0.11.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=true
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
